# money_machine

./: .dockerignore  .gitignore  ADDING_TOKEN_PAIRS.md  AI_ALPACA_INTEGRATION_COMPLETE.md  AI_DASHBOARD_READY.md  AI_DECIDER.md  AI_SYSTEM_GUIDE.md  ALPACA_DASHBOARD_GUIDE.md  BROKERAGE_CONNECTIONS.md  CLAUDE.md  Dockerfile  Dockerfile.mlflow  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  LICENSE  ML_QUICKSTART.md  Makefile  QUICK_START_2025.md  QUICK_START_AI.md  QUICK_START_DATA_COLLECTION.md  QUICK_UPDATE.md  README.md  SSE_STREAMING_GUIDE.md  START_COLLECTING.sh  WHATS_NEW_SSE.md  YOUR_ACTUAL_EDGE.md  __init__.py  ai_dashboard_widget.html  alpaca_dashboard.html  alpaca_server.py  check_env.py  check_wallet.py  coverage.xml  docker-compose.yml  health_check.py  install_packages.sh  integrate_ai_onchain_dashboard.py  monitor_routes.py  production_dashboard.html  pyproject.toml  (+31 more)
.claude/: README.md
.claude/commands/: add-pair.md  arb-scan.md  calc-profit.md  debug-trade.md  env-check.md  fix-types.md  flash-sim.md  gas-history.md  logs.md  monitor.md  rpc-health.md  status.md  target-size.md  test-runner.md
contracts/: AQUABSCArbitrage.sol  EnhancedHighSpeedArbRunner.sol
docs/: INDEX.md  README.md
docs/architecture/: CODE_AUDIT_2025.md  MODERN_BROKER_ARCHITECTURE.md
docs/deployment/: AQUA_BSC_DEPLOYMENT_GUIDE.md  DOCKER_COMPOSE_UPDATES.md  DOCKER_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md
docs/guides/: BROKER_SETUP_GUIDE.md  DASHBOARD_GUIDE.md  LIVE_BLOCKCHAIN_MONITOR_GUIDE.md  ML_INTEGRATION_GUIDE.md  NFT_INTEGRATION_GUIDE.md  REQUIREMENTS_GUIDE.md  RESTORATION_GUIDE.md
docs/integrations/: GRAFANA_ALERTING_SETUP.md  GRAFANA_SETUP_COMPLETE.md  KRAKEN_INTEGRATION.md  OPENSEA_CREDENTIALS_CHECKLIST.md  SUBGRAPH_FALLBACK_FIX.md
docs/reference/: GRAFANA_QUICK_REFERENCE.md  GRAFANA_QUICK_START.md  NFT_QUICK_REFERENCE.md  NFT_TECHNICAL_REFERENCE.md  QUICK_REFERENCE.md
docs/status/: 2025_INTEGRATION_SUMMARY.md  CRYPTO_UPDATE_SUMMARY.md  DASHBOARD_SUMMARY.md  SETUP_COMPLETE.md
documentation/: 11-26-2025 python-test.txt  1INCH_PORTFOLIO_V5_GUIDE.md  ADVANCED RESEARCH DIRECTIONS 12-05-2025.txt  Complete Backup & Restoration Comma.txt  Grafano and Docker.txt  INDEX.md  Investor Advisory—Virtual Currency _ NFA.html  KILL AND RESTART SERVER.txt  ML models integrated.txt  My Recommendation Start Here.txt  OANDA API Key.txt  PRODUCTION AI TRADING SYSTEM DEPLOYMENT.txt  Quick Restart Commands.txt  Where to Find Things in 1inch Portal.txt  ZIP FILES.txt  creating zip files.txt  maximal extractable value.txt  oanda_integration_guide.md
documentation/AI ML/: AI-ML On-Chain dashboard widget.txt  Complete AI System Implementation.txt  Documentation Guide.txt
documentation/Deployed Contracts-ethereum/: encodeArbData_js_and solidity file-arbitrage.txt
documentation/Flashloans/: Gas cap.txt
documentation/Investor Advisory—Virtual Currency _ NFA_files/: CoveoJsSearch.Lazy.min.js.download  DataHandlerProxy.js.download  FacetsMobileMode.min__6f1382502a9a212d2e7d.js.download  Searchbox.min__6f1382502a9a212d2e7d.js.download  all.js.download  bootstrap.css  coveo-contentLoader.js.download  coveoFullSearch-custom.css  coveoapiKeys.js.download  css  datatables.min.js.download  full-hero-content.css  gtm.js.download  hh-custom.css  hh-custom.js.download  hostedSearchPage.js.download  icon-fonts.css  js  js(1)  nfacommon.js.download  servermessage.js.download  slick-theme.css  spr-content.css  theme.css
documentation/NFTs/: NFTs money strategies.txt
documentation/OANDA/: 11-26-2025 OANDA files.txt  OANDA API Key.txt  TIMESCALEDB STARTUP.txt  TimescaleDB for your OANDA.txt  Week 1-2-3-4.txt  trade.oanda.txt
documentation/Requirments_txt_implementation after unzip/: Unzipped_requirements_txt.txt
documentation/Uniswap/: Uniswap docs.txt
documentation/ai/: AI_DASHBOARD_INTEGRATION.md  AI_INTEGRATED_SYSTEM_GUIDE.md  AQUA_AI_TRADER_GUIDE.md  DASHBOARD_AI_ONCHAIN_INTEGRATION.md
documentation/arbitrage/: AI Settings in Dashboard.txt  Arbitrage_steps-11-28-2025.txt  COMPLETE GUIDE Finding Arbitrage.txt  DASHBOARD_SETTINGS_11-29-2025.txt  Deploy Using Remix IDE.txt  FLASH_LOAN_ARBITRAGE_GUIDE.md  QUICK_START.md  Sepolia Testnet.txt  mainnet_deployment.txt  subgraph API.txt  ✅ What You Have Built.txt  🌊 Aqua Protocol - Complete Guide.txt
documentation/architecture/: PROJECT_SUMMARY.md  SYSTEM_COMPARISON.md
documentation/features/: ADVANCED_ARBITRAGE_STRATEGIES.md  DATA_COLLECTION_GUIDE.md  (+2 more)
examples/: README.md  __init__.py  ai_integration_example.py  complete_backtest.py  dex_arbitrage.py  list_crypto_assets.py  live_trading_crypto.py  live_trading_kraken.py  portfolio_tracking_example.py  quick_connection_test.py  strategy_comparison.py  test_broker_connection.py  test_crypto_order.py  test_kraken_connection.py  test_sse_streaming.py
models/: profit_maximizer.pkl  route_success_model.pkl  slippage_xgb.json
money_graphic/: networks.json  package-lock.json  package.json  schema.graphql  subgraph.yaml
monitoring/: alertmanager.yml  loki-config.yaml  postgres_exporter_queries.yaml  prometheus.yml  promtail-config.yaml
scripts/: README.md  bootstrap_ml_models.py  deploy_production.sh  fetch_initial_data.py  forex-collector.service  init_arbitrage_schema.sql  init_db_observability.sql  init_ml_schema.sql  init_oanda_schema.sql  init_optimized_schema.sql  init_postgres_schema.sql  init_production_tables.sql  live_monitor.sh  monitor_collection.sh  regenerate_ml_files.sh  run_data_collection.sh  setup_ml.sh  setup_timescaledb.sh  start_data_collection.sh  start_infrastructure.sh  stop_data_collection.sh  train_ml_models.py  train_slippage_model.py  validate_models.py  verify_db_setup.py  view_candles.py  view_live_prices.py
tests/: test_alpaca_adapter.py  test_arbitrage_runner.py  test_broker_adapters.py  test_broker_integration.py  test_connection_manager.py  test_execution.py  test_live_engine.py  test_oanda_adapter.py  test_paper_trading.py  test_routing.py  test_sizing.py  test_utils_resilience.py
typestubs/: structlog.pyi
(+130 files in other folders)
